--- a/Css/style.css
+++ b/Css/style.css
@@ -23,12 +23,10 @@
 }
 .footerInfo{
 	width: 35%;
-    border: 2px solid black;
 }
 .footerRedes{
 	width: 35%;
 	float: left;
-    border: 2px solid black;
 }
 .Encabezado{
 	text-align: center;
@@ -38,9 +36,8 @@
     border-bottom: 40px solid #a59268;
     border-radius: 40px;
 }
-#git , #github, #html5, #css3{
-	margin-top: 5%;
-	box-shadow: 2px 2px 2px 2px #e6e6e6a8;
+.row.subcontainer{
+	margin-top: 6%;
 	margin-left: 1%;
 }
 .btn{
@@ -59,6 +56,17 @@
 .ContentLogo img{
 	width: 50%;
     height: 50px;
+}
+.ContenedorDatos{
+	margin-top: 3%;
+	box-shadow: 2px 2px 2px 2px #e6e6e6a8;
+}
+.ContenedorFoto{
+	padding: 10px;
+}
+.ContenedorFoto img{
+	width: 100%;
+	height: 100%;
 }
 /*--------------------------------------------------------------
 16.0 - Totop
