--- a/Css/style.css
+++ b/Css/style.css
@@ -33,7 +33,7 @@
 	width: 0;
     height: 0;
     margin-bottom: 2%;
-    border-bottom: 40px solid #a59268;
+    border-bottom: 40px solid #f5b944;
     border-radius: 40px;
 }
 .row.subcontainer{
