--- a/Css/style.css
+++ b/Css/style.css
@@ -86,6 +86,9 @@ background-attachment: fixed;
 	width: 100%;
 	height: 100%;
 }
+.contenedorIMG img{
+	width: 100%;
+}
 /*--------------------------------------------------------------
 16.0 - Totop
 --------------------------------------------------------------*/
