--- a/Css/style.css
+++ b/Css/style.css
@@ -11,11 +11,21 @@
 .footer{
 	width: 100%;
 	height: auto;
-	background: #a59268;
+	background-color: #333333;
 	position: relative;
 	padding: 10px;
 	border-radius: 4px;
 	margin-top: 5%;
+}
+.footer p{
+	text-align: left;
+    color: #ffffff;
+    font-size: 12px;
+    line-height: 0.5;
+}
+.footer img{
+	float: left;
+	margin-right:90px
 }
 
 .container{
@@ -26,8 +36,11 @@
 	width: 35%;
 }
 .footerRedes{
-	width: 35%;
-	float: left;
+	width: 30%;
+	height: 50%;
+	float: right;
+}
+.footerRedes h6{
 }
 
 .banner{
@@ -73,7 +86,7 @@ background-attachment: fixed;
 
 .ContentLogo img{
 	width:  140px;
-    height: 70px;
+    height: 50px;
 }
 .ContenedorDatos{
 	margin-top: 3%;
@@ -165,7 +178,8 @@ background-attachment: fixed;
 }
 #toTop:hover:before { 
 	background: #fff; 
-}		
+}	
+
 @keyframes scroll { 
 	0% { 
 		opacity: 1; transform: 
