Sub Menu Actividades
1.Realizo nuevos cambios al sub menú de actividades.
2.Agrego nuevas actividades y contenido a la multimedia.
3.Tambien agrego contador de visitas.

--- a/Css/style.css
+++ b/Css/style.css
@@ -42,8 +42,14 @@
 	text-align: center;
     color: #fff;
 }
-.footerRedes h6{
+.Contador
+{
+    width: 20%;
+	height: 50%;
+	float: right;
+    color: #fff;
 }
+
 
 .banner{
 margin: auto;
