--- a/Css/bootstrap.css
+++ b/Css/bootstrap.css
@@ -172,6 +172,12 @@ a:hover {
   text-decoration: underline;
 }
 
+a:link 
+{ 
+text-decoration:none; 
+background-color: transparent;
+} 
+
 a:not([href]):not([tabindex]) {
   color: inherit;
   text-decoration: none;
